$Id$

MIDIbox NG V1.018
~~~~~~~~~~~~~~~~~

   o added EVENT_KB. See cfg/tests/kb_*.ngc for usage examples

   o new LCD formats: %N prints the note name based on the specified MIDI event,
     and %n based on the event value


MIDIbox NG V1.017
~~~~~~~~~~~~~~~~~

   o it's now possible to use the same hw_id in multiple event definitions.
     This allows for example to send multiple MIDI events from a single
     control element (e.g. from a single button)

   o the fwd_id now forwards to the event(s) with the given hw_id
     (which is the same like the "normal id" if not explicitely specified)

   o implemented "conditional events".
     See the user manual (.NGC chapter) for details and examples.

   o the new meta event UpdateLcd allows to force a refresh of the complete
     LCD content. This is especially useful in conjunction with conditional
     events: whenever a source value has been changed (e.g. a button state),
     all events which have this value in their condition will print out the
     label if the specified condition matches.


MIDIbox NG V1.016
~~~~~~~~~~~~~~~~~

   o LPC17: robustness of LCD driver has been improved


MIDIbox NG V1.015
~~~~~~~~~~~~~~~~~

   o support for GLCD_SSD1306_ROTATED

   o the ^txt and ^txt56 SysEx command now allows to map incoming characters to
     different cursor positions. An example can be found in cfg/templates/logictrl.ngc

   o independent from this map feature, ^txt and ^txt56 now also take lcd_pos=... and
     label=... into account to set the initial LCD and cursor position, at which the
     message will start. The label can be used to change the GLCD font before the
     characters will be print.
     An example can be found in cfg/templates/logictrl.ngc as well.


MIDIbox NG V1.014
~~~~~~~~~~~~~~~~~

   o the keyboard handler of MIDIbox KB has been integrated.
     The configuration commands are identical "set kb..." as documented at
     the MIDIbox KB page: http://www.ucapps.de/midibox_kb.html
